2006-09-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/pygimp-drawable.c (drw_set_name): use
	PyUnicode_Check() instead of PyString_Check().

	* plug-ins/pygimp/plug-ins/clothify.py: reverted localisation;
	this plug-in isn't installed by default.

2006-09-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/plug-ins/clothify.py
	* plug-ins/pygimp/plug-ins/gimpcons.py: need to call gettext.install
	here, otherwise we can't use _() in the register() call.

	* plug-ins/pygimp/gimpfu.py: don't call gettext.install() for the
	plug-in. Translate the blurb used as a user hint.

2006-09-20  Sven Neumann  <sven@gimp.org>

	* app/base/tile-manager.c (read_pixel_data_1) (write_pixel_data_1):
	fixed endian issues (bug #340965).

2006-09-20  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/gimpplugin.c (gimp_plug_in_close): if the plug-in is
	in a different process group than GIMP, kill the entire group so
	the plug-in's children are killed too.

	* plug-ins/uri/uri-backend-wget.c (uri_backend_load_image): open
	a process group so the wget process gets killed (bug #356643).

2006-09-20  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimphistogrambox.c: draw slider positions more
	accurately, fixed incorrect use of GtkAdjustments.

2006-09-20  Sven Neumann  <sven@gimp.org>

	* app/paint/gimpperspectiveclone.c: removed unused variables and
	unused macro.

2006-09-20  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpsourcecore.c: implement GimpPaintCore::start()
	and set paint_core->use_saved_proj to TRUE when we are using
	the destination drawable image's projection as source. Return
	FALSE from start() if there is no src_drawable set and removed
	checks for src_drawable != NULL further down in the code path.

	* app/tools/gimpperspectiveclonetool.c (button_press)
	* app/tools/gimpsourcetool.c (button_press): don't fiddle with
	paint_core->use_saved_proj here.

	* app/paint/gimpclone.c: implement GimpPaintCore::start() and