@@ -31,7 +31,6 @@ typedef enum
   GIMP_CANVAS_STYLE_XOR,
   GIMP_CANVAS_STYLE_XOR_DASHED,
   GIMP_CANVAS_STYLE_XOR_DOTTED,
-  GIMP_CANVAS_STYLE_XOR_STIPPLED,
   GIMP_CANVAS_STYLE_SELECTION_IN,
   GIMP_CANVAS_STYLE_SELECTION_OUT,
   GIMP_CANVAS_STYLE_LAYER_BOUNDARY,
